--- a/mkdocs_moonstone/mkdocs_theme.yml
+++ b/mkdocs_moonstone/mkdocs_theme.yml
@@ -1,7 +1,7 @@
 # Config options for 'moonstone' theme
 
 extends: bootstrap4
-fluid_layout: True
+fluid_layout: false
 suppress_nextprev: true
 highlightjs: true
 hljs_languages:
